@@ -109,7 +109,7 @@ int main( int argc, char *argv[] )
 
 #ifdef HAVE_PYTHON
 
-	Python::init();
+    //	Python::init();
 
 #endif
 
