@@ -1,3 +1,9 @@
+2001-12-18 Alexander Rawass <alexannika@users.sourceforge.net>
+	
+	* datatype int implemented (untested)
+	* added basic python support (SCREAM!)
+	
+
 2001-12-16 Alexander Rawass <alexannika@users.sourceforge.net>
 	
 	* added src/cmd/script/director.cpp
